tests/typing/faulty_simple_ducktyping.sy
A :: blob { a: int }
B :: blob { a: int, b: int }

f :: fn b: B -> int do ret b.b end

start :: fn do
	a :: A { a: 0 }
	f(a) <=> 0
end
// error: $Missmatch { .. }
